# archetype3

./: .gitignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
.github/workflows/: cd-backend.yml  ci-tests-and-checks.yml
apps/annotations/: admin.py  apps.py  models.py  schema.yaml  serializers.py  urls.py  views.py
apps/annotations/migrations/: 0001_initial.py
apps/annotations/tests/: factories.py  tests.py
apps/common/: admin.py  schema.yaml  tests.py  views.py
apps/common/templates/: swagger-ui.html
apps/handwriting/: admin.py  apps.py  models.py  schema.yaml
apps/handwriting/migrations/: 0001_initial.py  0002_alter_graph_item_image.py  0002_graph_components.py  0003_aspect_rename_location_graph_annotation_and_more.py  0004_alter_allograph_aspects_alter_allograph_components_and_more.py
apps/manuscripts/: admin.py  apps.py  models.py  schema.yaml  search.py  search_indexes.py  serializers.py  urls.py  views.py
apps/manuscripts/migrations/: 0001_initial.py  0002_alter_imagetext_item_image.py  0003_alter_itemimage_item_part_alter_repository_url.py  0004_remove_historicalitem_date_sort_and_more.py  0005_remove_itemimage_folio_number_and_more.py
apps/manuscripts/tests/: factories.py
apps/publications/: admin.py  apps.py  models.py  schema.yaml  serializers.py  urls.py  views.py
apps/publications/migrations/: 0001_initial.py  0002_alter_comment_post.py  0002_alter_publication_keywords.py  0002_carouselitem.py  0002_initial.py  0002_publication_keywords_alter_publication_status.py  0003_remove_publication_tags_alter_publication_keywords_and_more.py  0004_event_slug_alter_publication_slug.py  0005_rename_body_comment_content_publication_published_at.py
apps/scribes/: admin.py  apps.py  models.py  schema.yaml  search.py  search_indexes.py  serializers.py  urls.py  views.py
apps/scribes/migrations/: 0001_initial.py  0002_alter_handtoitempartimages_options.py  0003_alter_scribe_period_alter_scribe_scriptorium.py
apps/scribes/tests/: factories.py
apps/symbols_structure/: admin.py  apps.py  models.py  schema.yaml  serializers.py  urls.py  views.py
apps/symbols_structure/migrations/: 0001_initial.py
apps/symbols_structure/tests/: factories.py  tests.py
apps/users/: apps.py  models.py  schema.yaml  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_auto_20240924_2136.py  0002_rename_is_admin_user_is_staff.py  0003_auto_20240924_1428.py
apps/users/tests/: factories.py
config/: admin.py  apps.py  asgi.py  settings.py  test.env  urls.py  wsgi.py
